--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         function sendData() {
             var postData = document.getElementById('postData').value;
             var xhr = new XMLHttpRequest();
-            xhr.open('GET', 'http://localhost:8080/post?param1=1211', true);
+            xhr.open('GET', 'myapp://localhost:8080/post?param1=1211', true);
             xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
             xhr.onreadystatechange = function() {
                 alert(xhr.readyState)
