--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 </head>
 <body>
     <h1>WKWebView POST Example</h1>
+
+    <video width="100%" controls>
+        <source src="myapp://www.nbflix.com/videos/avpo.cloud/664db80e7a503ac6a4502274,664dba5d7a503ac6a4502288,664dba637a503ac6a4502289,664dba697a503ac6a450228c,664dbaa97a503ac6a4502296,664dbaae7a503ac6a4502297,664dbb297a503ac6a45022a1,664dbb2e7a503ac6a45022a3,664dbba67a503ac6a45022ad,664dbbaa7a503ac6a45022ae,664dbbae7a503ac6a45022af,664dbbb17a503ac6a45022b0,664dbbb57a503ac6a45022b1,664dbbb87a503ac6a45022b2,664dbbbc7a503ac6a45022b3,664dbbf57a503ac6a45022bd,664dbbf97a503ac6a45022bf,664dbbfa7a503ac6a45022c0" type="video/mp4">
+    </video>
+    
     <textarea id="postData" rows="4" cols="50">Enter data to send to server...</textarea><br>
     <button onclick="sendData()">Send Data to Server</button>
     <div id="response"></div>
