--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://unpkg.com/vconsole/dist/vconsole.min.js"></script>
 
     <video width="50%" height="400px" autoplay controls>
-        <source src="myapp://www.nbflix.com/videos/avpo.cloud/6641a6827a503ac6a44f454b,6641a6867a503ac6a44f454c,6641a6887a503ac6a44f454e,6641a68b7a503ac6a44f4550,6641a68e7a503ac6a44f4552,6641a6907a503ac6a44f4553" type="video/mp4">
+        <source src="myapp://fe2.nbflix.com/test.m3u8" type="video/mp4">
         Your browser does not support the video tag.
     </video>
     
