--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://unpkg.com/vconsole/dist/vconsole.min.js"></script>
 
     <video width="50%" height="400px" autoplay controls>
-        <source src="myapp://fe2.nbflix.com/test.m3u8" type="video/mp4">
+        <source src="https://fe2.nbflix.com/test.m3u8" type="video/mp4">
         Your browser does not support the video tag.
     </video>
     
