--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             sendData() 
         }
         function sendData() {
-            var postData = document.getElementById('postData').value;
+            // var postData = document.getElementById('postData').value;
             var xhr = new XMLHttpRequest();
             xhr.open('GET', 'https://www.nbflix.com/api/system/playlist/202402290012', true);
             xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
