--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             if (event.source !== window) return;
             console.log("Webpage received message: " + event.data["data"]);
             const response = event.data["data"];
-            const remoteOffer = await response.json();
+            const remoteOffer = response.json();
 
             console.log("Setting remote description");
             await pc.setRemoteDescription(new RTCSessionDescription(remoteOffer.answer));
