--- a/index.html
+++ b/index.html
@@ -122,6 +122,8 @@
             const remoteOffer = JSON.parse(response);//response.json();
 
             console.log("Setting remote description: " + remoteOffer);
+            console.log("Setting remote description2: " + remoteOffer["answer"]);
+
             await pc.setRemoteDescription(new RTCSessionDescription(remoteOffer.answer));
 
             console.log("Adding ICE candidates");
