--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             if (event.source !== window) return;
             console.log("Webpage received message: " + event.data["data"]);
             const response = event.data["data"];
-            const remoteOffer = JSON.parse(response);
+            const remoteOffer = await JSON.parse(response);
              
             console.log("remoteOffer: " + remoteOffer);
 
