--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
             if (response != undefined) {
                 try {
                     const remoteOffer = JSON.parse(response);
-                    console.log("Remote Offer Keys:", Object.keys(remoteOffer));
+                    console.log("Remote Offer Keys:", remoteOffer[0].answer);
 
-                    await pc.setRemoteDescription(new RTCSessionDescription(remoteOffer.answer));
+                    await pc.setRemoteDescription(new RTCSessionDescription(remoteOffer[0].answer));
         
                     console.log("Adding ICE candidates");
                     remoteOffer.iceCandidates.forEach(candidate => {
