--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     const clickStatUrl = 'https://volctrack.com/datatracer/ad_track/tracking?action_type=click&tracking_id=TR_Pukk6pAe&ua=__UA__&os_code=__OS__&ip=__IP__&timestamp_ms=__TS__&oaid=__OAID__&creative_id=__CID__&promotion_channel_id=kuaishou&campaign_id=__DID__&campaign_name=__DNAME__&ad_id=__AID__&idfa_withdash_md5=__IDFA2__&mac_upper_withcolon=__MAC__&mac_upper_withcolon_md5=__MAC2__&mac_upper_nocolon_md5=__MAC3__&callback_url=__CALLBACK__&csite=__CSITE__&idfa_sha1=__IDFA3__&imei_md5=__IMEI2__&androidid_md5=__ANDROIDID2__&oaid_md5=__OAID2__&imei_sha1=__IMEI3__&androidid_sha1=__ANDROIDID3__&account_id=__ACCOUNTID__&kuaishou_photo_id=__PHOTOID__&caid=__KENYID_CAA__';
 
     // APK 下载链接
-    const apkDownloadUrl = 'https://yourcdn.com/your-app.apk';
+    const apkDownloadUrl = 'https://assert.jinsetiyu.cn/apk/jinse.apk';
 
     // 曝光统计（进入页面时调用）
     window.addEventListener('DOMContentLoaded', () => {
