--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     const exposureUrl = '';
 
     // 点击统计 URL
-    const clickStatUrl = 'https://volctrack.com/s/WbJlVcMT';
+    const clickStatUrl = 'https://volctrack.com/s/9XjYlPa3';
 
     // APK 下载链接
     const apkDownloadUrl = 'https://assert.jinsetiyu.cn/apk/jinse.apk';
