--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <button id="downloadBtn">点击下载 APK</button>
+  <a href="qiuhs://open">点击打开 App</a>
 
   <script>
     // 曝光统计 URL（进入页面时调用）
