--- a/index.html
+++ b/index.html
@@ -3,11 +3,34 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  
   <title>APK 下载页面</title>
 </head>
 <body>
   <button id="downloadBtn">点击下载 APK</button>
   <a href="qiuhs://open">点击打开 App</a>
+
+  <script src="https://g.alicdn.com/jssdk/u-link/index.min.js"></script>
+
+  <script>
+  ULink([
+    {
+      id: "usr1cncto7khn144",
+      data: {},
+      selector: "",
+      useOpenInBrowerTips: "default",
+      proxyOpenDownload: function (defaultAction, LinkInstance){
+        if (LinkInstance.solution.type === "scheme"){
+          // qq或者微信环境特殊处理下
+          if (ULink.isWechat || ULink.isQQ) {
+            // 在qq或者微信环境执行内置逻辑，具体内置逻辑为:当设置了useOpenInBrowerTips字段时，qq&&微信&&scheme时，启用蒙层提示去浏览器打开
+            defaultAction();
+          }
+        }
+      },
+    },
+  ]);
+</script>
 
   <script>
     // 曝光统计 URL（进入页面时调用）
