--- a/index.html
+++ b/index.html
@@ -7,34 +7,32 @@
   <title>APK 下载页面</title>
 </head>
 <body>
-  <button id="downloadBtn">点击下载 APK</button>
-  <a href="qiuhs://open">点击打开 App</a>
-
+  <button id="xxl">点我唤起App</button>
+<!--   <a href="qiuhs://open">点击打开 App</a>
+ -->
   <script src="https://g.alicdn.com/jssdk/u-link/index.min.js"></script>
 
   <script>
-  ULink([
-    {
-      id: "usr1cncto7khn144",
-      data: {},
-      selector: '#downloadBtn',
-      auto:true,
-      timeout:2000,
-      lazy:false
-      useOpenInBrowerTips: "default",
-      proxyOpenDownload: function (defaultAction, LinkInstance){
-        if (LinkInstance.solution.type === "scheme"){
-          // qq或者微信环境特殊处理下
-          if (ULink.isWechat || ULink.isQQ) {
-            // 在qq或者微信环境执行内置逻辑，具体内置逻辑为:当设置了useOpenInBrowerTips字段时，qq&&微信&&scheme时，启用蒙层提示去浏览器打开
-            defaultAction();
-          }else{
-            window.location.href = LinkInstance.solution.downloadUrl;
+    ULink([
+      {
+        id: "usr1cncto7khn144",
+        data: {},
+        selector: '#xxl',
+        useOpenInBrowerTips: "default",
+        proxyOpenDownload: function (defaultAction, LinkInstance){
+          if (LinkInstance.solution.type === "scheme"){
+            // qq或者微信环境特殊处理下
+            if (ULink.isWechat || ULink.isQQ) {
+              // 在qq或者微信环境执行内置逻辑，具体内置逻辑为:当设置了useOpenInBrowerTips字段时，qq&&微信&&scheme时，启用蒙层提示去浏览器打开
+              defaultAction();
+            }else{
+              alert(LinkInstance.solution.downloadUrl)
+              window.location.href = LinkInstance.solution.downloadUrl;
+            }
           }
-        }
+        },
       },
-    },
-  ]);
+    ]);
 </script>
 
   <script>
